<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@android:id/background"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/together_widget_background"
  android:clipToOutline="true"
  android:orientation="vertical"
  android:outlineProvider="background"
  android:padding="18dp">

  <TextView
    android:id="@+id/together_widget_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ellipsize="end"
    android:fontFamily="sans-serif-medium"
    android:includeFontPadding="false"
    android:maxLines="1"
    android:text="@string/together_widget_preview_title"
    android:textColor="#3E382D"
    android:textSize="20sp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/together_widget_body"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="7dp"
    android:layout_weight="1"
    android:ellipsize="end"
    android:fontFamily="sans"
    android:includeFontPadding="false"
    android:lineSpacingExtra="2dp"
    android:maxLines="5"
    android:text="@string/together_widget_preview_body"
    android:textColor="#6F6555"
    android:textSize="14sp" />

  <AdapterViewFlipper
    android:id="@+id/together_widget_images"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="7dp"
    android:layout_weight="1"
    android:flipInterval="5000"
    android:loopViews="true"
    android:visibility="visible" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/together_widget_date"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:fontFamily="sans"
      android:includeFontPadding="false"
      android:maxLines="1"
      android:text="@string/together_widget_preview_date"
      android:textColor="#786D5B"
      android:textSize="13sp" />

    <ImageView
      android:id="@+id/together_widget_pin"
      android:layout_width="18dp"
      android:layout_height="18dp"
      android:contentDescription="@string/together_widget_pinned"
      android:src="@drawable/together_widget_pin" />

    <ImageView
      android:id="@+id/together_widget_configure"
      android:layout_width="44dp"
      android:layout_height="44dp"
      android:layout_marginEnd="-11dp"
      android:contentDescription="@string/together_widget_configure"
      android:padding="11dp"
      android:src="@drawable/together_widget_settings" />
  </LinearLayout>
</LinearLayout>
